namespaceRouting/manifests/01-namespace-extern.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ${EXTERN_NS}
  labels:
    istio-injection: enabled
