namespaceRouting/manifests/02-namespace-intern.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ${INTERN_NS}
  labels:
    istio-injection: enabled
